appId: com.rebbix.modnakasta
---
- tapOn:
    text: OK
    optional: true
- assertVisible: Вхід і реєстрація
- assertVisible:
    id: edit_phone_email
- tapOn:
    id: edit_phone_email
- inputText: maestro@testt.com
- tapOn:
    id: enter
- inputText: '123456'
- tapOn:
    id: sign_in
