appId: com.rebbix.modnakasta
---
- tapOn:
    text: OK
    optional: true
- tapOn:
    id: edit_phone_email
- inputText: maestro@testt.com
- tapOn:
    id: enter
- inputText: '0123456'
- tapOn:
    id: sign_in
